--- a/src/components/CountryCard.css
+++ b/src/components/CountryCard.css
@@ -4,7 +4,7 @@
     height: 100%;
 }
 .country-card {
-    width: 275px;
+    width: 100%;
     height: 275px;
     display: flex;
     flex-direction: column;
@@ -18,6 +18,7 @@
     filter: brightness(1.2);
     cursor: pointer;
 }
+
 .country-flag {
     width: 100%;
     height: 55%;
