--- a/src/pages/CountryPage.css
+++ b/src/pages/CountryPage.css
@@ -46,12 +46,14 @@
 
 .country-info-flag {
     max-width: 50%;
+    max-height: 75%;
     height: auto;
     
 }
 .country-info-flag img {
     width: 100%;
     height: auto;
+    max-height: 75%;
     border-radius: 20px;
 }
 
