--- a/src/skeletons/SkeletonLoaderCards.css
+++ b/src/skeletons/SkeletonLoaderCards.css
@@ -1,12 +1,11 @@
 .skeleton-card {
-    width: 275px;
+    width: 100%;
     height: 275px;
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
     background-color: transparent;
     border-radius: 6px;
-    
 }
 
 
